--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
     <li>
       <%= link_to task.title, task_path(task) %><br>
       <%= link_to '編集', edit_task_path(task) %> |
-      <%= link_to '削除', task_path(task), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to '削除', task_path(task), data: { turbo_method: :delete, turbo_confirm: '削除してよろしいですか？' } %>
     </li>
   <% end %>
 </ul>
