--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,19 +1,23 @@
-<h1>新しいタスク</h1>
-<%= form_with(model: @task, local: true) do |form| %>
-  <p>
-    <%= form.label :タイトル %><br>
-    <%= form.text_field :title %>
-  </p>
-  <p>
-    <%= form.label :説明 %><br>
-    <%= form.text_area :description %>
-  </p>
-  <p>
-    <%= form.label :完了にする %><br>
-    <%= form.check_box :completed %>
-  </p>
-  <p>
-    <%= form.submit 'タスク作成' %>
-  </p>
+<h1 class="page-title">新しいタスク</h1>
+
+<%= form_with(model: @task, local: true, class: "task-form") do |form| %>
+  <div class="form-group">
+    <%= form.label :タイトル, class: "form-label" %>
+    <%= form.text_field :title, class: "form-input" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :説明, class: "form-label" %>
+    <%= form.text_area :description, class: "form-textarea" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :完了にする, class: "form-label" %>
+    <%= form.check_box :completed, class: "form-checkbox" %>
+  </div>
+
+  <div class="form-actions">
+    <%= form.submit 'タスク作成', class: "btn btn-primary" %>
+    <%= link_to 'タスク一覧へ戻る', tasks_path, class: "btn btn-secondary" %>
+  </div>
 <% end %>
-<%= link_to 'タスク一覧へ戻る', tasks_path %>
