--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,14 @@
-<h1><%= @task.title %></h1>
-<p><%= @task.description %></p>
-<p>Completed: <%= @task.completed ? 'はい' : 'いいえ' %></p>
-<%= link_to '編集', edit_task_path(@task) %> |
-<%= link_to 'タスク一覧へ戻る', tasks_path %>
+<h1 class="page-title">タスク詳細</h1>
+
+<div class="task-detail">
+  <div class="task-info">
+    <h2 class="task-title"><%= @task.title %></h2>
+    <p class="task-description"><%= @task.description.presence || "説明はありません" %></p>
+    <p class="task-status">状態: <%= @task.completed ? '完了' : '未完了' %></p>
+  </div>
+
+  <div class="task-actions">
+    <%= link_to '編集', edit_task_path(@task), class: 'btn btn-primary' %>
+    <%= link_to 'タスク一覧へ戻る', tasks_path, class: 'btn btn-secondary' %>
+  </div>
+</div>
